fix/feat(): Updated live weather distribution and also fixed loading errors with certain classes.