@@ -1,6 +1,7 @@
 package teampixl.com.pixlpos.controllers.adminconsole;
 
 import javafx.animation.AnimationTimer;
+import javafx.application.Platform;
 import javafx.collections.FXCollections;
 import javafx.collections.ObservableList;
 import javafx.event.ActionEvent;
@@ -8,42 +9,38 @@ import javafx.fxml.FXML;
 import javafx.fxml.FXMLLoader;
 import javafx.scene.chart.PieChart;
 import javafx.scene.control.*;
+import javafx.scene.image.Image;
+import javafx.scene.image.ImageView;
+import javafx.scene.layout.HBox;
 import javafx.stage.Stage;
 import javafx.util.Duration;
 import teampixl.com.pixlpos.common.GuiCommon;
+import teampixl.com.pixlpos.database.DataStore;
 import teampixl.com.pixlpos.database.api.*;
 import teampixl.com.pixlpos.models.MenuItem;
 import teampixl.com.pixlpos.models.Order;
-import teampixl.com.pixlpos.models.Users;
-import teampixl.com.pixlpos.database.DataStore;
-
 import teampixl.com.pixlpos.models.Stock;
+import teampixl.com.pixlpos.models.Users;
 
 import java.io.IOException;
+import java.io.InputStream;
+import java.net.HttpURLConnection;
+import java.net.URL;
 import java.time.LocalDateTime;
 import java.time.format.DateTimeFormatter;
-import java.util.Comparator;
-import java.util.List;
-import java.util.Map;
+import java.util.*;
 
-
-import javafx.scene.layout.HBox;
+import org.json.JSONObject;
+import org.json.JSONTokener;
 
 public class AdminScreenHomeController {
-    /*===================================================================================================================================================================================
-    Code Description:
-    This class is the controller for the home admin screen of the application.
-    ====================================================================================================================================================================================*/
     private final UserStack userStack = UserStack.getInstance();
-    Users currentuser = userStack.getCurrentUser();
-    String firstName = currentuser.getMetadata().metadata().get("first_name").toString();
+    private final Users currentUser = userStack.getCurrentUser();
+    private final String firstName = currentUser.getMetadata().metadata().get("first_name").toString();
     private final StockAPI stockAPI = StockAPI.getInstance();
     private final IngredientsAPI ingredientsAPI = IngredientsAPI.getInstance();
     private final DataStore dataStore = DataStore.getInstance();
     private final OrderAPI orderAPI = OrderAPI.getInstance();
-    /*
-    Shared Components
-     */
 
     @FXML
     private Label greeting;
@@ -53,7 +50,6 @@ public class AdminScreenHomeController {
     private Label date;
     @FXML
     private Label time;
-
     @FXML
     private Button homebutton;
     @FXML
@@ -66,7 +62,6 @@ public class AdminScreenHomeController {
     private Button analyticsbutton;
     @FXML
     private Button logoutbutton;
-
     @FXML
     private ListView<HBox> noteslistview;
     @FXML
@@ -75,14 +70,16 @@ public class AdminScreenHomeController {
     private ListView<HBox> userloglistview;
     @FXML
     private ListView<HBox> topsellerslistview;
-
     @FXML
     private PieChart piechart;
-
     @FXML
     private Label piechartlabel;
+    @FXML
+    private ImageView weatherIcon;
+    @FXML
+    private Label temperatureLabel;
 
-    AnimationTimer datetime = new AnimationTimer() {
+    private final AnimationTimer datetime = new AnimationTimer() {
         @Override
         public void handle(long now) {
             date.setText(LocalDateTime.now().format(DateTimeFormatter.ofPattern("dd/MM/yyyy")));
@@ -90,7 +87,27 @@ public class AdminScreenHomeController {
         }
     };
 
-    protected void addtooltips() {
+    @FXML
+    public void initialize() {
+        initializeDependencies();
+        datetime.start();
+        greeting.setText("Hello, " + firstName);
+        addTooltips();
+        initializeWidgets();
+        loadWeatherData();
+    }
+
+    private void initializeDependencies() {
+        while (DataStore.getInstance() == null || StockAPI.getInstance() == null || IngredientsAPI.getInstance() == null || OrderAPI.getInstance() == null) {
+            try {
+                Thread.sleep(100);
+            } catch (InterruptedException e) {
+                e.printStackTrace();
+            }
+        }
+    }
+
+    private void addTooltips() {
         Tooltip hometooltip = new Tooltip("home");
         hometooltip.setShowDelay(Duration.millis(250));
         Tooltip.install(homebutton, hometooltip);
@@ -116,84 +133,129 @@ public class AdminScreenHomeController {
         Tooltip.install(logoutbutton, logouttooltip);
     }
 
-    @FXML
-    public void initialize() {
-        datetime.start();
-        greeting.setText("Hello, " + firstName);
-        addtooltips();
-
-        /* WIDGET CODE */
+    private void initializeWidgets() {
         noteslistview.getItems().clear();
-        addNoteToListView(noteslistview, "1", "John Doe", "This is a note");
-        addNoteToListView(noteslistview, "2", "Jane Doe", "This is a note");
-        addNoteToListView(noteslistview, "3", "Michael Doe", "This is a note");
+        addNoteToListView("1", "John Doe", "This is a note");
+        addNoteToListView("2", "Jane Doe", "This is a note");
+        addNoteToListView("3", "Michael Doe", "This is a note");
+
         stockalertlistview.getItems().clear();
         calculateStockWidget();
+
         userloglistview.getItems().clear();
-        adduserlogToListView(userloglistview, "1", "13/12/2020", "John Smith", "10:02am", "0hrs 6mins");
-        adduserlogToListView(userloglistview, "2", "12/12/2020", "Jane Doe", "9:02am", "5hrs 6mins");
-        adduserlogToListView(userloglistview, "3", "14/12/2020", "Michael Smith", "11:02am", "4hrs 6mins");
+        addUserLogToListView("1", "13/12/2020", "John Smith", "10:02am", "0hrs 6mins");
+        addUserLogToListView("2", "12/12/2020", "Jane Doe", "9:02am", "5hrs 6mins");
+        addUserLogToListView("3", "14/12/2020", "Michael Smith", "11:02am", "4hrs 6mins");
+
         topsellerslistview.getItems().clear();
         findTop5Sellers();
+
         PaymentPieChartController paymentPieChartController = new PaymentPieChartController();
         paymentPieChartController.initialize();
     }
 
+    public void loadWeatherData() {
+        new Thread(() -> {
+            try {
+                WeatherData weatherData = fetchWeatherData();
+                if (weatherData != null) {
+                    Platform.runLater(() -> {
+                        String iconFilename = getWeatherIcon(weatherData.condition());
+                        if (iconFilename != null) {
+                            Image image = new Image(getClass().getResourceAsStream("/teampixl/com/pixlpos/images/weathericons/" + iconFilename));
+                            weatherIcon.setImage(image);
+                        }
+                    });
+                }
+            } catch (Exception e) {
+                e.printStackTrace();
+            }
+        }).start();
+    }
+
+
+
+    private WeatherData fetchWeatherData() {
+        String apiKey = "4e4e5534d5ac03b5ec33c8b2f450ba8d";
+        String location = "Brisbane,AU";
+        String urlString = "https://api.openweathermap.org/data/2.5/weather?q=" + location + "&units=metric&appid=" + apiKey;
+
+        try {
+            URL url = new URL(urlString);
+            HttpURLConnection connection = (HttpURLConnection) url.openConnection();
+            connection.setRequestMethod("GET");
+            InputStream responseStream = connection.getInputStream();
+            JSONTokener tokener = new JSONTokener(responseStream);
+            JSONObject jsonObject = new JSONObject(tokener);
+
+            double temperature = jsonObject.getJSONObject("main").getDouble("temp");
+            String condition = jsonObject.getJSONArray("weather").getJSONObject(0).getString("main");
+            System.out.println("Temperature: " + temperature + "°C, Condition: " + condition);
+            return new WeatherData(temperature, condition);
+        } catch (IOException e) {
+            e.printStackTrace();
+        }
+        return null;
+    }
+
+    private String getWeatherIcon(String condition) {
+        Map<String, String> conditionIconMap = new HashMap<>();
+        conditionIconMap.put("Clear", "sunny_icon.png");
+        conditionIconMap.put("Clouds", "cloudy_icon.png");
+        conditionIconMap.put("Rain", "cloudy_rain_icon.png");
+        conditionIconMap.put("Drizzle", "cloud_drizzel_rain_icon.png");
+        conditionIconMap.put("Thunderstorm", "cloud_storm_icon.png");
+        conditionIconMap.put("Snow", "clouds_snow_icon.png");
+        conditionIconMap.put("Fog", "cloudy_foggy_icon.png");
+        conditionIconMap.put("Mist", "cloudy_foggy_icon.png");
+        conditionIconMap.put("Haze", "cloudy_foggy_icon.png");
+
+        return conditionIconMap.getOrDefault(condition, "sunny_icon.png");
+    }
 
     @FXML
     protected void onUsersButtonClick() {
-        // Handle exit button click
-
         Stage stage = (Stage) usersbutton.getScene().getWindow();
         GuiCommon.loadScene(GuiCommon.ADMIN_SCREEN_USERS_FXML, GuiCommon.ADMIN_SCREEN_USERS_TITLE, stage);
-//        double width = stage.getScene().getWindow().getWidth();
-//        double height = stage.getScene().getWindow().getHeight();
-//        GuiCommon.loadScene(GuiCommon.ADMIN_SCREEN_USERS_FXML, GuiCommon.ADMIN_SCREEN_USERS_TITLE, stage,width,height);
     }
 
     @FXML
     protected void onMenuButtonClick() {
-        // Handle exit button click
         Stage stage = (Stage) menubutton.getScene().getWindow();
         GuiCommon.loadScene(GuiCommon.ADMIN_SCREEN_MENU_FXML, GuiCommon.ADMIN_SCREEN_MENU_TITLE, stage);
     }
 
     @FXML
     protected void onHomeButtonClick() {
-        // Handle exit button click
         Stage stage = (Stage) homebutton.getScene().getWindow();
         GuiCommon.loadScene(GuiCommon.ADMIN_SCREEN_HOME_FXML, GuiCommon.ADMIN_SCREEN_HOME_TITLE, stage);
     }
 
     @FXML
     protected void onStockButtonClick() {
-        // Handle exit button click
         Stage stage = (Stage) stockbutton.getScene().getWindow();
         GuiCommon.loadScene(GuiCommon.ADMIN_SCREEN_STOCK_FXML, GuiCommon.ADMIN_SCREEN_STOCK_TITLE, stage);
     }
 
     @FXML
     protected void onAnalyticsButtonClick() {
-        // Handle exit button click
         Stage stage = (Stage) analyticsbutton.getScene().getWindow();
         GuiCommon.loadScene(GuiCommon.ADMIN_SCREEN_ANALYTICS_FXML, GuiCommon.ADMIN_SCREEN_ANALYTICS_TITLE, stage);
     }
 
     @FXML
+    protected void onLogoutButtonClick() {
+        GuiCommon.logout(logoutbutton);
+    }
+
+    @FXML
     protected void onSettingsButtonClick() {
-        // Implementation for settings button
+
     }
 
     @FXML
     protected void onAddNoteButtonClick() {
-        // Handle exit button click
-        addNoteToListView(noteslistview, "1", "John Doe", "This is a note");
-    }
-
-
-    @FXML
-    protected void onLogoutButtonClick() {
-        GuiCommon.logout(logoutbutton);
+        addNoteToListView("1", "John Doe", "This is a note");
     }
 
     private void calculateStockWidget() {
@@ -203,10 +265,12 @@ public class AdminScreenHomeController {
 
         stockalertlistview.getItems().clear();
         for (Stock stock : leastInStockItems) {
-            addStockAlertListView(stockalertlistview, stock.getMetadataValue("stock_id").toString(),
+            addStockAlertToListView(
+                    stock.getMetadataValue("stock_id").toString(),
                     ingredientsAPI.reverseKeySearch(stock.getMetadataValue("ingredient_id").toString()),
                     (Stock.StockStatus) stock.getMetadataValue("stockStatus"),
-                    (Boolean) stock.getMetadataValue("onOrder"));
+                    (Boolean) stock.getMetadataValue("onOrder")
+            );
         }
     }
 
@@ -221,119 +285,75 @@ public class AdminScreenHomeController {
         topsellerslistview.getItems().clear();
         int rank = 1;
         for (MenuItem menuItem : top5Sellers) {
-            System.out.println(menuItem.getMetadataValue("id").toString());
-            System.out.println(menuItem.getMetadataValue("itemName").toString());
             String rankString = "#" + rank;
-            addTopSellerToListView(topsellerslistview, menuItem.getMetadataValue("id").toString(),
+            addTopSellerToListView(
+                    menuItem.getMetadataValue("id").toString(),
                     rankString,
-                    (String) menuItem.getMetadataValue("itemName"));
+                    menuItem.getMetadataValue("itemName").toString()
+            );
             rank++;
         }
     }
 
-
-    /* ===============
-    ==========================================Start of dynamic Widget code========================================================= */
-
-    public void addNoteToListView(ListView<HBox> listView, String id, String user, String note) {
+    public void addNoteToListView(String id, String user, String note) {
         try {
-            // Load HBox from FXML
             FXMLLoader loader = new FXMLLoader(getClass().getResource("/teampixl/com/pixlpos/fxml/adminconsole/dynamics/homedynamics/notesdynamic.fxml"));
             HBox hbox = loader.load();
-
-            // Set the ID of the HBox
             hbox.setId(id);
-
-            // Get the controller associated with the FXML (if you have one)
-            // Optionally, set values via the controller, or directly access the fields
-            // Example: If you have IDs set in FXML for the labels, you can access them like this:
 
             Label datefield = (Label) hbox.lookup("#datelabel");
             Label userfield = (Label) hbox.lookup("#userlabel");
             Label notefield = (Label) hbox.lookup("#notelabel");
 
-            LocalDateTime now = LocalDateTime.now();
-            DateTimeFormatter formatter = DateTimeFormatter.ofPattern("dd/MM/yyyy");
-            String formattedDate = now.format(formatter);
-
-            // Set values dynamically
+            String formattedDate = LocalDateTime.now().format(DateTimeFormatter.ofPattern("dd/MM/yyyy"));
             datefield.setText(formattedDate);
             userfield.setText(user);
             notefield.setText(note);
-            // Set action handlers for buttons (if they exist in your FXML)
 
             Button removebutton = (Button) hbox.lookup("#removenotebutton");
             removebutton.setOnAction(event -> onRemoveNoteButtonClick(event, id));
+            Tooltip tooltip = new Tooltip("Remove Item");
+            removebutton.setTooltip(tooltip);
 
-            Tooltip tooltip2 = new Tooltip("Remove Item");
-            removebutton.setTooltip(tooltip2);
-
-            // Add the HBox to the ListView
-            listView.getItems().add(hbox);
-
+            noteslistview.getItems().add(hbox);
         } catch (IOException e) {
             e.printStackTrace();
         }
     }
 
-
     private void onRemoveNoteButtonClick(ActionEvent event, String id) {
-        // Implement remove menu item logic here
-        ObservableList<HBox> items = noteslistview.getItems(); // Get the items of the ListView
-
-        // Loop through the list to find the HBox with the matching ID
-        for (int i = 0; i < items.size(); i++) {
-            HBox hbox = items.get(i);
-
-            if (id.equals(hbox.getId())) {  // Compare the ID of the HBox
-                try {
-                    items.remove(i);  // Remove the HBox at the found index
-                    // Handle delete user button click
-
-                } catch (Exception ignored) {
-
-                }
-                break;            // Exit the loop once the HBox is removed
-            }
-        }
+        ObservableList<HBox> items = noteslistview.getItems();
+        items.removeIf(hbox -> id.equals(hbox.getId()));
     }
 
-
-    public void addStockAlertListView(ListView<HBox> listView, String id, String name, Stock.StockStatus status, boolean onOrder) {
+    public void addStockAlertToListView(String id, String name, Stock.StockStatus status, boolean onOrder) {
         try {
-            // Load HBox from FXML
             FXMLLoader loader = new FXMLLoader(getClass().getResource("/teampixl/com/pixlpos/fxml/adminconsole/dynamics/homedynamics/stockalertdynamic.fxml"));
             HBox hbox = loader.load();
-
-            // Set the ID of the HBox
             hbox.setId(id);
 
-            // Get the controller associated with the FXML (if you have one)
             Label namefield = (Label) hbox.lookup("#stocknamelabel");
             Label levelfield = (Label) hbox.lookup("#stocklevellabel");
             Label statusfield = (Label) hbox.lookup("#stockstatuslabel");
 
-
-            //get Level and Status from database based off name
-
-            // Set values dynamically
             namefield.setText(name);
 
-            //set depending on database
-
-            if(status == Stock.StockStatus.INSTOCK) {
-                levelfield.setText("In Stock");
-                levelfield.getStyleClass().add("stockalert-level-in");
-            } else if(status == Stock.StockStatus.LOWSTOCK) {
-                levelfield.setText("Low Stock");
-                levelfield.getStyleClass().add("stockalert-level-low");
-            } else if(status == Stock.StockStatus.NOSTOCK) {
-                levelfield.setText("No Stock");
-                levelfield.getStyleClass().add("stockalert-level-no");
-
+            switch (status) {
+                case INSTOCK -> {
+                    levelfield.setText("In Stock");
+                    levelfield.getStyleClass().add("stockalert-level-in");
+                }
+                case LOWSTOCK -> {
+                    levelfield.setText("Low Stock");
+                    levelfield.getStyleClass().add("stockalert-level-low");
+                }
+                case NOSTOCK -> {
+                    levelfield.setText("No Stock");
+                    levelfield.getStyleClass().add("stockalert-level-no");
+                }
             }
 
-            if(onOrder) {
+            if (onOrder) {
                 statusfield.setText("ON-ORDER");
                 statusfield.getStyleClass().add("stockalert-status-on");
             } else {
@@ -341,54 +361,38 @@ public class AdminScreenHomeController {
                 statusfield.getStyleClass().add("stockalert-status-not");
             }
 
-            // Add the HBox to the ListView
-            listView.getItems().add(hbox);
-
+            stockalertlistview.getItems().add(hbox);
         } catch (IOException e) {
             e.printStackTrace();
         }
     }
 
-
-    public void adduserlogToListView(ListView<HBox> listView, String id, String date,String user ,String logged, String active) {
+    public void addUserLogToListView(String id, String date, String user, String logged, String active) {
         try {
-            // Load HBox from FXML
             FXMLLoader loader = new FXMLLoader(getClass().getResource("/teampixl/com/pixlpos/fxml/adminconsole/dynamics/homedynamics/userlogdynamic.fxml"));
             HBox hbox = loader.load();
-
-            // Set the ID of the HBox
             hbox.setId(id);
-
-            // Get the controller associated with the FXML (if you have one)
-            // Optionally, set values via the controller, or directly access the fields
-            // Example: If you have IDs set in FXML for the labels, you can access them like this:
 
             Label datefield = (Label) hbox.lookup("#datelabel");
             Label userfield = (Label) hbox.lookup("#userlabel");
             Label loggedfield = (Label) hbox.lookup("#loggedlabel");
             Label activefield = (Label) hbox.lookup("#activelabel");
 
-
-            // Set values dynamically
             datefield.setText(date);
             userfield.setText(user);
             loggedfield.setText(logged);
             activefield.setText(active);
-            // Set action handlers for buttons (if they exist in your FXML)
 
-            // Add the HBox to the ListView
-            listView.getItems().add(hbox);
-
+            userloglistview.getItems().add(hbox);
         } catch (IOException e) {
             e.printStackTrace();
         }
     }
 
-    public void addTopSellerToListView(ListView<HBox> listView, String id, String rank,String name)  {
+    public void addTopSellerToListView(String id, String rank, String name) {
         try {
             FXMLLoader loader = new FXMLLoader(getClass().getResource("/teampixl/com/pixlpos/fxml/adminconsole/dynamics/homedynamics/topsellersdynamic.fxml"));
             HBox hbox = loader.load();
-
             hbox.setId(id);
 
             Label rankfield = (Label) hbox.lookup("#ranklabel");
@@ -397,48 +401,38 @@ public class AdminScreenHomeController {
             rankfield.setText(rank);
             namefield.setText(name);
 
-            listView.getItems().add(hbox);
-
+            topsellerslistview.getItems().add(hbox);
         } catch (IOException e) {
             e.printStackTrace();
         }
     }
 
-
     public class PaymentPieChartController {
-
         @FXML
         private void initialize() {
             double totalAmount = fillPieChartWithData();
             piechart.setLegendVisible(false);
-            piechartlabel.setText("Total Sales: $%.2f".formatted(totalAmount));
+            piechartlabel.setText(String.format("Total Sales: $%.2f", totalAmount));
             piechartlabel.getStyleClass().add("notes-labeltext");
         }
 
         private double fillPieChartWithData() {
             orderAPI.reloadOrders();
             List<Order> orders = orderAPI.getOrders();
-            System.out.println(orders);
+
             double totalAmount = 0.0;
             double cashAmount = 0.0;
             double cardAmount = 0.0;
             double mobileAmount = 0.0;
 
             for (Order order : orders) {
-                double orderTotal = (double)order.getDataValue("total");
-                System.out.println(orderTotal);
+                double orderTotal = (double) order.getDataValue("total");
                 totalAmount += orderTotal;
 
                 switch (order.getDataValue("payment_method").toString()) {
-                    case "CASH":
-                        cashAmount += orderTotal;
-                        break;
-                    case "CARD":
-                        cardAmount += orderTotal;
-                        break;
-                    case "MOBILE":
-                        mobileAmount += orderTotal;
-                        break;
+                    case "CASH" -> cashAmount += orderTotal;
+                    case "CARD" -> cardAmount += orderTotal;
+                    case "MOBILE" -> mobileAmount += orderTotal;
                 }
             }
 
@@ -449,31 +443,19 @@ public class AdminScreenHomeController {
             );
 
             piechart.setData(pieChartData);
-            addDataLabels(pieChartData, (int)totalAmount);
+            addDataLabels(pieChartData, totalAmount);
             return totalAmount;
         }
 
-        private void setPieChartData(Map<String, Integer> data) {
-            int cash = data.getOrDefault("Cash", 0);
-            int card = data.getOrDefault("Card", 0);
-            int mobile = data.getOrDefault("Mobile", 0);
-            int total = cash + card + mobile;
-
-            ObservableList<PieChart.Data> pieChartData = FXCollections.observableArrayList(
-                    new PieChart.Data("Cash", cash),
-                    new PieChart.Data("Card", card),
-                    new PieChart.Data("Mobile", mobile)
-            );
-
-            piechart.setData(pieChartData);
-            addDataLabels(pieChartData, total);
-        }
-
-        private void addDataLabels(ObservableList<PieChart.Data> pieChartData, int total) {
+        private void addDataLabels(ObservableList<PieChart.Data> pieChartData, double total) {
             for (PieChart.Data data : pieChartData) {
                 String percentage = String.format("%.1f%%", (data.getPieValue() / total) * 100);
                 data.nameProperty().set(data.getName() + " " + percentage);
             }
         }
     }
+
+    private record WeatherData(double temperature, String condition) {
+    }
 }
+
